kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  type: LoadBalancer
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: backend
